load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_pkg//:mappings.bzl", "pkg_files", "strip_prefix")
load("@rules_pkg//pkg:pkg.bzl", "pkg_zip", "pkg_tar")

go_library(
    name = "project_template",
    srcs = ["projects.go"],
    embedsrcs = [
        "template/abkuerzungen.csv",
        "template/bib_entries.csv",
        "template/citedKeys.csv",
        "template/data/bib_categories.json",
        "template/data/bib_entries.json",
        "template/styPackages/abk_verzeichnis.sty",
        "template/styPackages/anhang.sty",
        "template/styPackages/bibliography.sty",
        "template/styPackages/codes.sty",
        "template/styPackages/fusszeilen.sty",
        "template/styPackages/header_footer.sty",
        "template/styPackages/html.sty",
        "template/styPackages/inhaltsverzeichnis.sty",
        "template/styPackages/ueberschriften.sty",
        "template/main.tex",
    ],
    importpath = "github.com/TimoSto/ThesorTeX/pkg/backend/project_template",
    visibility = ["//services/app:__subpackages__"],
)

pkg_files(
    name = "srcs",
    srcs = glob(["template/**/*"]),
    strip_prefix = strip_prefix.from_pkg("template"),
    visibility = ["//services:__subpackages__"],
)

pkg_zip(
    name = "template_zip",
    srcs = [
        ":srcs",
    ],
)

genrule(
    name = "documentation",
    srcs = [
        "documentation.md"
    ],
    outs = ["docs"],
    cmd = "mkdir $(OUTS) && $(location //tools/documentationbuilder:documentationbuilder) -out-dir=$(location docs) -src=$(location documentation.md)",
    tools = ["//tools/documentationbuilder:documentationbuilder"],
)

pkg_tar(
    name = "documentation_tar",
    srcs = [":documentation"],
    extension = "tar.gz",
    strip_prefix = strip_prefix.from_pkg("docs"),
    visibility = ["//visibility:public"],
)
