load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "semver",
    srcs = ["semver.go"],
    importpath = "github.com/TimoSto/ThesorTeX/pkg/backend/semver",
    visibility = ["//visibility:public"],
)

go_test(
    name = "semver_test",
    srcs = ["semver_test.go"],
    embed = [":semver"],
    deps = ["//vendor/github.com/google/go-cmp/cmp"],
)
