load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "versionhandler",
    srcs = ["version_handler.go"],
    importpath = "github.com/TimoSto/ThesorTeX/pkg/backend/versionhandler",
    visibility = ["//visibility:public"],
    deps = ["//pkg/backend/log"],
)

go_test(
    name = "versionhandler_test",
    srcs = ["version_handler_test.go"],
    embed = [":versionhandler"],
    deps = ["//vendor/github.com/google/go-cmp/cmp"],
)
