load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("//:bazel/vitest/vitest.bzl", "vitest_run")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

npm_package(
    name = "vue-component-library",
    srcs = [
        "package.json",
    ] + glob([
        "src/**/*",
    ]),
    visibility = ["//visibility:public"],
)

vitest_run(
    name = "vitest",
    data = glob([
        "src/**/*",
    ]) + [
        ":vite.config.ts",
        ":vuetify.test.config.ts",
        ":node_modules/vuetify",
        "//:node_modules/vite",
        "//:node_modules/vitest",
        "//:node_modules/vue",
        "//:node_modules/@vue/test-utils",
        ":node_modules/@vitejs/plugin-vue",
        ":node_modules/vite-plugin-vuetify",
        ":node_modules/pinia",
        "//:node_modules/@pinia/testing",
        ":node_modules/sass",
        ":node_modules/reveal.js",
        ":node_modules/@thesortex/vitest-vuetify",
        "//:node_modules/vue-i18n",
        "//:node_modules/happy-dom",
    ],
    config_path = "$(execpath :vite.config.ts)",
    root = "pkg/frontend/vue-component-library/",
)
